<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
	<LinearLayout
	              android:orientation="vertical"
	              android:layout_width="match_parent"
	              android:layout_height="match_parent">
		<RelativeLayout android:layout_width="match_parent"
		                android:layout_height="280dp">
			<info.hoang8f.android.segmented.SegmentedGroup
					android:id="@+id/data_type"
					android:layout_width="match_parent"
					android:layout_height="36dp"
					android:layout_alignParentBottom="true"
					android:layout_marginBottom="20dp"
					android:layout_marginRight="45dp"
					android:layout_marginLeft="45dp"
					android:orientation="horizontal"
					android:layout_gravity="center_horizontal"
					app:sc_tint_color="@color/colorAccent"
					app:sc_border_width="1dp"
					app:sc_corner_radius="15dp">

				<RadioButton
						android:id="@+id/total"
						android:layout_width="0px"
						android:layout_weight="1"
						android:textSize="11dp"
						android:layout_height="wrap_content"
						android:text="@string/total"
						android:maxLines="1"
						android:ellipsize="end"
						android:checked="true"
						style="@style/RadioButton" />

				<RadioButton
						android:id="@+id/wifi"
						android:layout_width="0px"
						android:layout_weight="1"
						android:textSize="11dp"
						android:maxLines="1"
						android:ellipsize="end"
						android:layout_height="wrap_content"
						android:text="@string/wifi"
						style="@style/RadioButton" />
				<RadioButton
						android:id="@+id/mobile"
						android:layout_width="0px"
						android:layout_weight="1"
						android:textSize="11dp"
						android:maxLines="1"
						android:ellipsize="end"
						android:layout_height="wrap_content"
						android:text="@string/mobile"
						style="@style/RadioButton" />
			</info.hoang8f.android.segmented.SegmentedGroup>
		</RelativeLayout>
		<RelativeLayout android:layout_width="match_parent"
		                android:layout_height="240dp">
			<info.hoang8f.android.segmented.SegmentedGroup
					android:id="@+id/data_interval"
					android:layout_width="match_parent"
					android:layout_height="36dp"
					android:layout_alignParentBottom="true"
					android:layout_marginBottom="20dp"
					android:layout_marginRight="45dp"
					android:layout_marginLeft="45dp"
					android:orientation="horizontal"
					android:layout_gravity="center_horizontal"
					app:sc_border_width="1dp"
					app:sc_tint_color="@color/colorAccent"
					app:sc_corner_radius="15dp">

				<RadioButton
						android:id="@+id/daily"
						android:layout_width="0px"
						android:layout_weight="1"
						android:textSize="11dp"
						android:layout_height="wrap_content"
						android:text="@string/daily"
						android:maxLines="1"
						android:ellipsize="end"
						android:checked="true"
						style="@style/RadioButton" />

				<RadioButton
						android:id="@+id/weekly"
						android:layout_width="0px"
						android:layout_weight="1"
						android:textSize="11dp"
						android:maxLines="1"
						android:ellipsize="end"
						android:layout_height="wrap_content"
						android:text="@string/weekly"
						style="@style/RadioButton" />
				<RadioButton
						android:id="@+id/monthly"
						android:layout_width="0px"
						android:layout_weight="1"
						android:textSize="11dp"
						android:maxLines="1"
						android:ellipsize="end"
						android:layout_height="wrap_content"
						android:text="@string/monthly"
						style="@style/RadioButton" />
			</info.hoang8f.android.segmented.SegmentedGroup>
		</RelativeLayout>
		<View
				android:id="@+id/firstDivider"
				android:layout_width="match_parent"
				android:layout_height="30dp"
				android:background="#eeeeee"></View>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

			<RelativeLayout
					android:id="@+id/screenTimeContainer"
					android:layout_width="match_parent"
					android:layout_height="@dimen/home_item_height"
					android:background="?attr/selectableItemBackground">

				<ImageView
						android:id="@+id/ic_enable"
						android:layout_width="@dimen/home_item_height"
						android:layout_height="@dimen/home_item_height"
						android:layout_alignParentLeft="true"
						android:padding="@dimen/home_ic_padding"
						android:src="@drawable/ic_screen_time" />

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"

						android:layout_toRightOf="@+id/ic_enable"
						android:text="@string/app_name"
						android:fontFamily="@font/roboto_medium"
						android:textColor="@color/black" />


				<com.agooday.customview.SwitchButton
						android:id="@+id/screenTimeCheck"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:layout_centerVertical="true"
						app:sb_checked_color="@color/colorAccent"
						android:layout_marginRight="@dimen/home_ic_padding"
						android:checked="true"
						android:clickable="false"
						app:sb_show_indicator="false" />
				<View
						android:layout_width="match_parent"
						android:layout_alignParentBottom="true"
						android:layout_height="1dp"
						android:id="@+id/screenTimeDivider"
						android:layout_marginLeft="@dimen/home_item_height"
						android:background="#eeeeee" />
			</RelativeLayout>


			<RelativeLayout
					android:id="@+id/downtimeContainer"
					android:layout_width="match_parent"
					android:layout_height="@dimen/home_item_height"
					android:background="?attr/selectableItemBackground">

				<ImageView
						android:id="@+id/icDowntime"
						android:layout_width="@dimen/home_item_height"
						android:layout_height="@dimen/home_item_height"
						android:layout_alignParentLeft="true"
						android:padding="@dimen/home_ic_padding"
						android:src="@drawable/ic_downtime" />

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:fontFamily="@font/roboto_medium"
						android:layout_toRightOf="@+id/icDowntime"
						android:text="@string/data_tracker"
						android:textColor="@color/black" />

				<View
						android:layout_width="1.5dp"
						android:layout_height="match_parent"
						android:background="@color/gray"
						android:layout_marginTop="12dp"
						android:layout_marginBottom="12dp"
						android:layout_toLeftOf="@+id/downtimeCheck"
						android:layout_marginRight="10dp"
				/>

				<com.agooday.customview.SwitchButton
						android:id="@+id/downtimeCheck"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						app:sb_checked_color="@color/colorAccent"
						android:layout_centerVertical="true"
						android:layout_marginRight="@dimen/home_ic_padding"
						android:clickable="true"
						android:focusable="true"
						app:sb_show_indicator="false" />
				<View
						android:layout_width="match_parent"
						android:layout_alignParentBottom="true"
						android:layout_height="1dp"
						android:layout_marginLeft="@dimen/home_item_height"
						android:background="#eeeeee" />
			</RelativeLayout>


			<RelativeLayout
					android:id="@+id/appLimitsContainer"
					android:layout_width="match_parent"
					android:layout_height="@dimen/home_item_height"
					android:background="?attr/selectableItemBackground">

				<ImageView
						android:id="@+id/icAppLimits"
						android:layout_width="@dimen/home_item_height"
						android:layout_height="@dimen/home_item_height"
						android:layout_alignParentLeft="true"
						android:padding="@dimen/home_ic_padding"
						android:src="@drawable/ic_app_limits" />

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_toRightOf="@+id/icAppLimits"
						android:text="@string/mobile_data_limits"
						android:fontFamily="@font/roboto_medium"
						android:textColor="@color/black" />

				<View
						android:layout_width="1.5dp"
						android:layout_height="match_parent"
						android:background="@color/gray"
						android:layout_marginTop="12dp"
						android:layout_marginBottom="12dp"
						android:layout_toLeftOf="@+id/appLimitsCheck"
						android:layout_marginRight="10dp"
				/>

				<com.agooday.customview.SwitchButton
						android:id="@+id/appLimitsCheck"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:layout_centerVertical="true"
						app:sb_checked_color="@color/colorAccent"
						android:layout_marginRight="@dimen/home_ic_padding"
						android:clickable="true"
						android:focusable="true"
						app:sb_show_indicator="false" />

			</RelativeLayout>
		</LinearLayout>

		<View
				android:id="@+id/secondDevider"
				android:layout_width="match_parent"
				android:layout_height="30dp"
				android:background="#eeeeee"></View>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/settingsDonateAboutContainer"
				android:orientation="vertical">

			<RelativeLayout
					android:id="@+id/settingsContainer"
					android:layout_width="match_parent"
					android:layout_height="@dimen/home_item_height"
					android:background="?attr/selectableItemBackground">

				<ImageView
						android:id="@+id/icSettings"
						android:layout_width="@dimen/home_item_height"
						android:layout_height="@dimen/home_item_height"
						android:layout_alignParentLeft="true"
						android:padding="@dimen/home_ic_padding"
						android:src="@drawable/ic_settings" />

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_toRightOf="@+id/icSettings"
						android:text="@string/settings"
						android:fontFamily="@font/roboto_medium"
						android:textColor="@color/black" />


				<ImageView
						android:layout_width="@dimen/ic_navigate_size"
						android:layout_height="@dimen/ic_navigate_size"
						android:layout_alignParentRight="true"
						android:layout_centerVertical="true"
						android:layout_marginRight="15dp"
						android:src="@drawable/ic_next" />

			</RelativeLayout>

			<include layout="@layout/home_divider" />

			<RelativeLayout
					android:id="@+id/donateContainer"
					android:layout_width="match_parent"
					android:layout_height="@dimen/home_item_height"
					android:background="?attr/selectableItemBackground">

				<ImageView
						android:id="@+id/icDonate"
						android:layout_width="@dimen/home_item_height"
						android:layout_height="@dimen/home_item_height"
						android:layout_alignParentLeft="true"
						android:padding="@dimen/home_ic_padding"
						android:src="@drawable/ic_upgrade" />

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_toRightOf="@+id/icDonate"
						android:text="@string/upgrade"
						android:fontFamily="@font/roboto_medium"
						android:textColor="@color/black" />


				<ImageView
						android:layout_width="@dimen/ic_navigate_size"
						android:layout_height="@dimen/ic_navigate_size"
						android:layout_alignParentRight="true"
						android:layout_centerVertical="true"
						android:layout_marginRight="15dp"
						android:src="@drawable/ic_next" />

			</RelativeLayout>

			<include layout="@layout/home_divider" />

			<RelativeLayout
					android:id="@+id/aboutContainer"
					android:layout_width="match_parent"
					android:layout_height="@dimen/home_item_height"
					android:background="?attr/selectableItemBackground">

				<ImageView
						android:id="@+id/icAbout"
						android:layout_width="@dimen/home_item_height"
						android:layout_height="@dimen/home_item_height"
						android:layout_alignParentLeft="true"
						android:padding="@dimen/home_ic_padding"
						android:src="@drawable/ic_about" />

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_toRightOf="@+id/icAbout"
						android:fontFamily="@font/roboto_medium"
						android:text="@string/about"
						android:textColor="@color/black" />

				<ImageView
						android:layout_width="@dimen/ic_navigate_size"
						android:layout_height="@dimen/ic_navigate_size"
						android:layout_alignParentRight="true"
						android:layout_centerVertical="true"
						android:layout_marginRight="15dp"
						android:src="@drawable/ic_next" />

			</RelativeLayout>


		</LinearLayout>

	</LinearLayout>
</ScrollView>

